<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/add_location"
        android:title="@string/action_add_location"
        android:icon="@drawable/ic_add_location_black_24dp"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/confirm_position"
        android:title="@string/action_confirm_marker"
        android:icon="@drawable/ic_done_black_24dp"
        app:showAsAction="always"
        android:visible="false"/>

    <item android:id="@+id/cancel_position"
        android:title="@string/cancel"
        android:icon="@drawable/ic_clear_black_24dp"
        app:showAsAction="always"
        android:visible="false" />

    <item android:id="@+id/search_location"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>
</menu>