<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="jawas.tripmarker.profile.ProfileFragment">

    <ImageView android:id="@+id/ageIcon"
        style="@style/image"
        android:layout_row="1"
        android:background="@drawable/ic_face_white_24dp"/>

    <ImageView android:id="@+id/genderIcon"
        android:layout_row="2"
        style="@style/image"
        android:background="@drawable/ic_favorite_white_24dp"/>

    <ImageView android:id="@+id/homeplaceIcon"
        android:layout_row="3"
        style="@style/image"
        android:background="@drawable/ic_home_white_24dp"/>

    <ImageView android:id="@+id/statusIcon"
        android:layout_row="4"
        style="@style/image"
        android:background="@drawable/ic_star_half_white_24dp"/>

    <ImageView android:id="@+id/lastaddedIcon"
        android:layout_row="5"
        style="@style/image"
        android:background="@drawable/ic_location_on_white_24dp"/>

    <TextView android:id="@+id/name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:layout_row="0"
        style="@style/text"/>

    <TextView android:id="@+id/age"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/age"
        android:layout_row="1"
        style="@style/text"/>

    <TextView android:id="@+id/gender"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/gender"
        android:layout_row="2"
        style="@style/text"/>

    <TextView android:id="@+id/homeplace"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/homeplace"
        android:layout_row="3"
        style="@style/text"/>

    <TextView android:id="@+id/status"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/status"
        android:layout_row="4"
        style="@style/text"/>

    <TextView android:id="@+id/lastadded"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lastadded"
        android:layout_row="5"
        style="@style/text"/>
</GridLayout>