<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_login"
    tools:context="jawas.tripmarker.login.LoginActivity">

    <EditText android:id="@+id/password"
        style="@style/input"
        android:inputType="textPassword"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:hint="@string/title_password"/>

    <EditText android:id="@+id/email"
        style="@style/input"
        android:inputType="textEmailAddress"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:hint="@string/title_email"/>

    <Button android:id="@+id/sign_in"
        style="@style/button"
        android:text="@string/sign_in"
        android:layout_marginTop="68dp"
        android:layout_below="@+id/password"
        android:layout_alignRight="@+id/password"
        android:layout_alignEnd="@+id/password"
        android:layout_alignLeft="@+id/password"
        android:layout_alignStart="@+id/password"
        android:onClick="signIn"/>

    <Button android:id="@+id/sign_up"
        style="@style/button"
        android:text="@string/sign_up"
        android:layout_below="@+id/sign_in"
        android:layout_marginTop="20dp"
        android:layout_alignRight="@+id/sign_in"
        android:layout_alignLeft="@+id/sign_in"
        android:layout_alignStart="@+id/sign_in"
        android:layout_alignEnd="@+id/sign_in"
        android:onClick="signUp"/>

</RelativeLayout>
